--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,140 @@ li{
     padding: 0;
 }
 
-/*html, body, .container-portfolio{
-    height: 100%;
-}*/
+.welcome{
+    background-color: #171718;
+    color: #fafafa;
+    padding-bottom: 248px;
+}
+
+.header{
+    border-bottom: 1px solid #26292d;
+}
+
+.header__container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+
+.header__logo{
+    color: #fff;
+    font-weight: 700;
+    font-size: 24px;
+}
+
+.header__logo span{
+    font-weight: 400;
+}
+
+.header__ul{
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.header__ul a{
+    color: #fff;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    position: relative;
+}
+
+.header__ul a:hover::before,
+.header__ul a .is-active::before{
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+}
+
+
+.header__ul a::before{
+    content: '';
+    display: block;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    height: 3px;
+    background-color: #5C62EC;
+    transform: scale(0);
+    transition: .2s all ease-in-out;
+    -webkit-transition: .2s all ease-in-out;
+    -moz-transition: .2s all ease-in-out;
+    -ms-transition: .2s all ease-in-out;
+    -o-transition: .2s all ease-in-out;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+}
+
+.welcome__title{
+    font-size: 60px;
+    font-weight: 700;
+    color: #fafafa;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding-top: 182px;
+    gap: 7px;
+}
+
+h1{
+    color: #5C62EC;
+    font-size: 60px;
+}
+
+.welcome__desc{
+    font-size: 40px;
+    font-weight: 700;
+    display: flex;
+    line-height: 140%;
+    justify-content: center;
+    margin: -20px 0 40px;
+}
+
+.welcome__text{
+    font-size: 18px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 60px;
+}
+
+.welcome__btn{
+    font-size: 16px;
+    font-weight: 500;
+    outline: none;
+    padding: 12px 28px;
+    background-color: #5C62EC;
+    color: #fff;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.welcome__btn:hover{
+    color: #5C62EC;
+    background-color: #fff;
+    transition: .2s all ease-in-out;
+    -webkit-transition: .2s all ease-in-out;
+    -moz-transition: .2s all ease-in-out;
+    -ms-transition: .2s all ease-in-out;
+    -o-transition: .2s all ease-in-out;
+}
+
+.welcome__button{
+    display: flex;
+    justify-content: center;
+}
 
 .projects{
     padding: 70px 0;
